Add sass support

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,8 @@
     <script src="../bower_components/jquery/jquery.js"></script>
     <script src="../bower_components/jcrop/js/jquery.Jcrop.js"></script>
     <script src="../dist/jcrop-fileinput.js"></script>
-    <link rel="stylesheet" href="../bower_components/jcrop/css/jquery.Jcrop.css" title="" type="" />
+    <link rel="stylesheet" href="../bower_components/jcrop/css/jquery.Jcrop.css" />
+    <link rel="stylesheet" href="../dist/jcrop-fileinput.css" />
   </head>
   <body>
     <form action="post" method="get" accept-charset="utf-8">
