Set initial selection on JCrop

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,8 @@
         $("#fileinput").JCropFileInput({
           preview_height: 150,
           preview_width: 150,
-          save_callback: show_saved_image
+          save_callback: show_saved_image,
+          ratio: 4/3
         });
       });
     </script>
