--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,18 @@
       .field-container {
         width: 640px;
       }
+      #images {
+        width: 640px;
+        margin: auto;
+      }
+      .image-container {
+        display: inline-block;
+        padding: 10px;
+        box-shadow: 0 0 10px #444;
+        border: 1px solid #CCC;
+        border-radius: 6px;
+        margin-right: 30px;
+      }
     </style>
   </head>
   <body>
@@ -38,20 +50,22 @@
        <input type="file" name="example-input" id="fileinput" />
       </div>
     </form>
+    <div id="images"></div>
     <script>
       var show_saved_image = function (image_data) {
-        console.log(image_data)
+        image_container = $('<div>').addClass('image-container')
         image = document.createElement('img')
         image.src = image_data
-        $('form').after(image)
+        image_container.append(image)
+        $('#images').append(image_container)
       }
 
       $(function() {
         $("#fileinput").JCropFileInput({
           preview_height: 150,
           preview_width: 150,
-          max_height: 500,
-          max_width: 500,
+          scale_height: 100,
+          scale_width: 100,
           save_callback: show_saved_image,
           ratio: 1
         });
