--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>JCrop File Input Demo</title>
+    <meta charset=utf-8 />
     <script src="../bower_components/jquery/jquery.js"></script>
     <script src="../bower_components/jcrop/js/jquery.Jcrop.js"></script>
     <script src="../dist/jcrop-fileinput.js"></script>
