Initial work on initial image edit

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,6 @@
         font-family: sans;
       }
       form {
-
         margin: 100px auto;
         width: 640px;
         border: 1px solid #CCC;
@@ -48,7 +47,7 @@
     <form action="post" method="get" accept-charset="utf-8">
       <legend>Image uploader</legend>
       <div class="field-container">
-       <input type="file" name="example-input" id="fileinput" />
+       <input type="file" name="example-input" id="fileinput" value="nyancat.jpg" />
       </div>
     </form>
     <div id="images"></div>
