--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,12 @@
   <head>
     <title>JCrop File Input Demo</title>
     <meta charset=utf-8 />
-    <script src="../bower_components/jquery/jquery.js"></script>
-    <script src="../bower_components/jcrop/js/jquery.Jcrop.js"></script>
-    <script src="../dist/jcrop-fileinput.js"></script>
-    <link rel="stylesheet" href="../bower_components/jcrop/css/jquery.Jcrop.css" />
-    <link rel="stylesheet" href="../dist/jcrop-fileinput.css" />
+    <script src="polyfill/modernizr.js"></script>
+    <script src="jquery/jquery.js"></script>
+    <script src="jcrop/js/jquery.Jcrop.js"></script>
+    <script src="jcrop-fileinput.js"></script>
+    <link rel="stylesheet" href="jcrop/css/jquery.Jcrop.css" />
+    <link rel="stylesheet" href="jcrop-fileinput.css" />
     <style type="text/css" media="all">
       body {
         font-family: sans;
