Use data-initial attribute instead of value

--- a/demo/index.html
+++ b/demo/index.html
@@ -63,7 +63,7 @@
     <form action="post" method="get" accept-charset="utf-8">
       <legend>Image uploader</legend>
       <div class="field-container">
-       <input type="file" name="example-input" id="fileinput" value="nyancat.jpg" />
+       <input type="file" name="example-input" id="fileinput" data-initial="nyancat.jpg" />
       </div>
     </form>
     <div id="images"></div>
