Add crop and delete buttons

--- a/demo/index.html
+++ b/demo/index.html
@@ -83,6 +83,7 @@
           scale_height: 100,
           scale_width: 100,
           save_callback: show_saved_image,
+          show_crop_button: true,
           ratio: 1
         });
       });
