--- a/demo/index.html
+++ b/demo/index.html
@@ -84,6 +84,7 @@
           scale_width: 100,
           save_callback: show_saved_image,
           show_crop_button: true,
+          show_delete_button: true,
           ratio: 1
         });
       });
