--- a/demo/index.html
+++ b/demo/index.html
@@ -90,7 +90,8 @@
           delete_callback: delete_image,
           show_crop_button: true,
           show_delete_button: true,
-          ratio: 1
+          ratio: 1,
+          debug: true,
         });
       });
     </script>
