Ensure that the dimensions of resized image fit inside original image

--- a/demo/index.html
+++ b/demo/index.html
@@ -97,7 +97,7 @@
           invalid_callback: on_invalid_image,
           show_crop_button: true,
           show_delete_button: true,
-          ratio: 1,
+          ratio: 1.66666666666667,
           debug: true,
         });
       });
