Send width + heigth to invalid_callback

--- a/demo/index.html
+++ b/demo/index.html
@@ -80,8 +80,8 @@
          $('#images').last().remove();
       }
 
-      var on_invalid_image = function () {
-        alert("The image is too small!");
+      var on_invalid_image = function (width, height) {
+        alert("The image is too small (" + width + "x" + height + ")!");
       }
 
       $(function() {
@@ -97,7 +97,7 @@
           invalid_callback: on_invalid_image,
           show_crop_button: true,
           show_delete_button: true,
-          ratio: 1.66666666666667,
+          ratio: 1,
           debug: true,
         });
       });
