--- a/demo/index.html
+++ b/demo/index.html
@@ -88,15 +88,15 @@
         $("#fileinput").JCropFileInput({
           preview_height: 150,
           preview_width: 150,
-          max_height: 100,
-          max_width: 100,
-          min_height: 100,
-          min_width: 100,
-          save_callback: show_saved_image,
-          delete_callback: delete_image,
-          invalid_callback: on_invalid_image,
-          show_crop_button: true,
-          show_delete_button: true,
+          maxHeight: 100,
+          maxWidth: 100,
+          minHeight: 100,
+          minWidth: 100,
+          saveCallback: show_saved_image,
+          deleteCallback: delete_image,
+          invalidCallback: on_invalid_image,
+          showCropButton: true,
+          showDeleteButton: true,
           ratio: 1,
           debug: true,
         });
