Revert to Jcrop 0.9.12. 2.0 is busted

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,9 +5,9 @@
     <meta charset=utf-8 />
     <script src="polyfill/modernizr.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/jcrop/js/Jcrop.js"></script>
+    <script src="../bower_components/jcrop/js/jquery.Jcrop.js"></script>
     <script src="../dist/jcrop-fileinput.js"></script>
-    <link rel="stylesheet" href="../bower_components/jcrop/css/Jcrop.css" />
+    <link rel="stylesheet" href="../bower_components/jcrop/css/jquery.Jcrop.css" />
     <link rel="stylesheet" href="../dist/jcrop-fileinput.css" />
     <style type="text/css" media="all">
       body {
