Add canvas to blob in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <title>JCrop File Input Demo</title>
     <meta charset=utf-8 />
     <script src="polyfill/modernizr.js"></script>
+    <script src="../bower_components/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/jcrop/js/jquery.Jcrop.js"></script>
     <script src="../dist/jcrop-fileinput.js"></script>
